--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 
 {% block title %}Panel de Control{% endblock %}
+{% block meta_description %}Panel de control principal con calendario de tareas y actividades{% endblock %}
 
 {% block extra_css %}
     <link href="{{ url_for('static', filename='css/calendar.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<div class="container mx-auto px-4 py-8">
-    <div class="bg-white rounded-lg shadow p-6">
-        <div id="calendar" class="w-full"></div>
+    <h1 class="text-2xl font-bold mb-6 text-gray-800 dark:text-gray-200">Panel de Control</h1>
+    
+    <div class="bg-white dark:bg-gray-700 rounded-lg shadow p-6">
+        <div id="calendar" class="w-full" aria-label="Calendario de actividades"></div>
     </div>
-</div>
 {% endblock %}
